--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,22 @@
 <div class="container">
+  <app-cockpit
+    (serverCreated)="onServerAdded($event)"
+    (bpCreated)="onBlueprintAdded($event)"></app-cockpit>
+  <hr>
   <div class="row">
     <div class="col-xs-12">
-      <h3>I'm in the AppComponent!</h3>
+      <button class="btn btn-primary" (click)="onChangeFirst()">Change first Element</button>
+      <button class="btn btn-primary" (click)="onDestroyFirst()">Destroy first component</button>
+      <app-server-element
+        *ngFor="let serverElement of serverElements"
+         [srvElement]="serverElement"
+        [name]="serverElement.name">
+        <p #contentParagraph>
+          <strong *ngIf="serverElement.type === 'server'" style="color: red;"> {{ serverElement.content }}</strong>
+          <em *ngIf="serverElement.type === 'blueprint'"> {{ serverElement.content}}</em>
+        </p>
+      </app-server-element>
       <hr>
-      <app-servers></app-servers>
-
     </div>
   </div>
 </div>
